PRC-597: added support for comment paging
